--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
-  min-height: 100vh;
+  height: 100%;
   background-color: black;
 }
 
@@ -22,4 +26,5 @@ body::before {
   display: flex;
   justify-content: center;
   min-width: fit-content; /* min-width to fix zoom issue (parts of the table can't be scrolled into) */
+  height: 100%;
 }
